msa_work/k8s/ingress/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pmh-ingress
spec:
  rules:
  - http:
      paths:
      - path: /first-service
        pathType: Prefix
        backend:
          service:
            name: first-service
            port:
              number: 40001
      - path: /second-service
        pathType: Prefix
        backend:
          service:
            name: second-service
            port:
              number: 40002
  ingressClassName: nginx
